package com.dungeondevs.components;

import com.artemis.Component;

public class ArmeComponent extends Component {
    public String nomArme;
}
