package com.dungeondevs.components;

import com.artemis.Component;
import com.badlogic.gdx.physics.box2d.Body;
import com.badlogic.gdx.physics.box2d.BodyDef;

public class PhysicsComponent extends Component {
    public Body body;
}
